# glm

./: CMakeLists.txt
cmake/: glm.pc.in  glmConfig.cmake.in
